# tabling_helper

./: .gitignore  .~lock.AULAS.docx#  ExtractorTablasWord.spec  export_data.py  extract_data.py  main.py  pyproject.toml  regex_tester.py  tables_extractor.py
